# tokenscale

./: .gitignore  CHANGELOG.md  CHARTER.md  Cargo.toml  LICENSE  NOTICE  README.md  RELEASING.md  dist-workspace.toml  environmental-factors.toml  pricing.toml  request-for-research.md
.github/: dist-build-setup.yml
.github/workflows/: build-setup.yml  release.yml
crates/tokenscale-cli/: Cargo.toml
crates/tokenscale-cli/src/: config.rs  main.rs
crates/tokenscale-core/: Cargo.toml
crates/tokenscale-core/src/: billable.rs  billing.rs  error.rs  event.rs  factors.rs  impact.rs  lib.rs  pricing.rs
crates/tokenscale-ingest-api/: Cargo.toml
crates/tokenscale-ingest-api/src/: lib.rs
crates/tokenscale-ingest-cc/: Cargo.toml
crates/tokenscale-ingest-cc/src/: error.rs  lib.rs  parser.rs  scan.rs  walker.rs
crates/tokenscale-ingest-cc/tests/: fixture_scan.rs
crates/tokenscale-ingest-cc/tests/fixtures/: realistic_session.jsonl
crates/tokenscale-server/: Cargo.toml
crates/tokenscale-server/src/: embed.rs  error.rs  lib.rs  state.rs
crates/tokenscale-server/src/routes/: billing.rs  docs.rs  factors.rs  health.rs  mod.rs  projects.rs  sessions.rs  subscriptions.rs  usage.rs
crates/tokenscale-store/: Cargo.toml
crates/tokenscale-store/src/: billing.rs  database.rs  error.rs  events.rs  factors_lookup.rs  factors_sync.rs  files.rs  impact_query.rs  lib.rs  queries.rs  subscriptions.rs
docs/: architecture.md  cost-methodology.md  data-sources.md  decisions.md  methodology.md  request-for-research.md  research-cadence.md  research-log.md  roadmap-granular-attribution.md  sources.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
migrations/: 20260428000001_initial.sql  20260429000001_phase2_factor_columns.sql  20260506000001_file_state_len.sql  20260506000002_billing_charges.sql  20260515000001_grid_factor_uncertainty.sql  20260516000001_grid_factor_indirect_water.sql
