[package]
name        = "tokenscale-core"
description = "Domain types and pure-function math for tokenscale: events, factors, cost, environmental impact."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
serde.workspace     = true
thiserror.workspace = true
chrono.workspace    = true
toml.workspace      = true
