[package]
name        = "tokenscale-ingest-api"
description = "Anthropic Admin API ingester (Phase 2). Pulls /v1/organizations/usage_report/messages and /v1/organizations/cost_report."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
tokenscale-core.workspace  = true
tokenscale-store.workspace = true
reqwest.workspace          = true
serde.workspace            = true
serde_json.workspace       = true
thiserror.workspace        = true
chrono.workspace           = true
tokio.workspace            = true
tracing.workspace          = true
