[package]
name        = "tokenscale-ingest-cc"
description = "Claude Code JSONL session-log ingester. Reads ~/.claude/projects/<project-id>/<session-id>.jsonl."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
tokenscale-core.workspace  = true
tokenscale-store.workspace = true
serde.workspace            = true
serde_json.workspace       = true
thiserror.workspace        = true
chrono.workspace           = true
tokio.workspace            = true
tracing.workspace          = true
sha2.workspace             = true
hex.workspace              = true
directories.workspace      = true
