[package]
name        = "tokenscale-server"
description = "axum HTTP server exposing the tokenscale REST API and serving the embedded React dashboard."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
tokenscale-core.workspace  = true
tokenscale-store.workspace = true
axum.workspace             = true
tower.workspace            = true
tower-http.workspace       = true
tokio.workspace            = true
tracing.workspace          = true
serde.workspace            = true
serde_json.workspace       = true
chrono.workspace           = true
thiserror.workspace        = true
anyhow.workspace           = true
rust-embed.workspace       = true
mime_guess                 = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
